WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205773
[LFC][Integration] Fix fast/repaint/simple-line-layout-shrinking-content.html
https://bugs.webkit.org/show_bug.cgi?id=205773
Summary
[LFC][Integration] Fix fast/repaint/simple-line-layout-shrinking-content.html
alan
Reported
2020-01-04 17:41:26 PST
ssia
Attachments
Patch
(2.14 KB, patch)
2020-01-04 17:59 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-04 17:41:46 PST
<
rdar://problem/58319960
>
alan
Comment 2
2020-01-04 17:59:56 PST
Created
attachment 386777
[details]
Patch
Antti Koivisto
Comment 3
2020-01-05 00:05:48 PST
Comment on
attachment 386777
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=386777&action=review
> Source/WebCore/rendering/RenderBlockFlow.cpp:3724 > + repaintLogicalTop = contentBoxTop; > + repaintLogicalBottom = borderBoxBottom;
Shouldn't both these be from the same box?
WebKit Commit Bot
Comment 4
2020-01-05 06:50:16 PST
Comment on
attachment 386777
[details]
Patch Clearing flags on attachment: 386777 Committed
r254040
: <
https://trac.webkit.org/changeset/254040
>
WebKit Commit Bot
Comment 5
2020-01-05 06:50:18 PST
All reviewed patches have been landed. Closing bug.
alan
Comment 6
2020-01-05 07:36:48 PST
(In reply to Antti Koivisto from
comment #3
)
> Comment on
attachment 386777
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=386777&action=review
> > > Source/WebCore/rendering/RenderBlockFlow.cpp:3724 > > + repaintLogicalTop = contentBoxTop; > > + repaintLogicalBottom = borderBoxBottom; > > Shouldn't both these be from the same box?
This repaint logic should really just be about the content box. Right now I am just matching SLL behavior.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug