[LFC][Integration] Fix fast/repaint/simple-line-layout-shrinking-content.html https://bugs.webkit.org/show_bug.cgi?id=205773 <rdar://problem/58319960>

Reviewed by Antti Koivisto.

Let's add padding and border to the repaint rect (which is not quite right since at this level reapint rect should
be about the content change, but that's what SLL does and it fixes some repaint issues when
the box with padding/border shrinks).

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutLFCLines):


Canonical link: https://commits.webkit.org/218915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254040 268f45cc-cd09-0410-ab3c-d52691b4dbfc